add Type=oneshot to systemd unit file

--- a/systemd/cryptremote.service
+++ b/systemd/cryptremote.service
@@ -3,6 +3,7 @@ Description=Open LUKS volumes with remote keys
 After=network-online.target
 
 [Service]
+Type=oneshot
 ExecStart=/usr/local/sbin/cryptremote open
 
 [Install]
